# pulumi-kubernetes-cert-manager

./: .ci-mgmt.yaml  .editorconfig  .gitignore  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  Makefile  README.md  mise.toml  schema.json
.github/workflows/: build.yml  command-dispatch.yml  lint.yml  prerelease.yml  pull-request.yml  release.yml  run-acceptance-tests.yml  weekly-pulumi-update.yml
examples/: examples_go_test.go  examples_py_test.go  examples_test.go  examples_ts_test.go  go.mod  go.sum
examples/gke-auto-pilot-cert-manager-ts/: Pulumi.yaml  index.ts  package.json
examples/simple-cert-manager-dotnet/: Program.cs  Pulumi.yaml  simple-cert-manager-dotnet.csproj
examples/simple-cert-manager-go/: Pulumi.yaml  go.mod  go.sum  main.go
examples/simple-cert-manager-py/: Pulumi.yaml  __main__.py  (+1 more)
provider/: go.mod  go.sum
sdk/: go.mod  go.sum
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_cert_manager_resources/: __init__.py  _utilities.py  provider.py  pulumi-plugin.json
sdk/python/pulumi_cert_manager_resources/acme/: __init__.py
sdk/python/pulumi_cert_manager_resources/acme/v1/: Challenge.py  Order.py  __init__.py  _inputs.py  outputs.py
sdk/python/pulumi_cert_manager_resources/certmanager/: __init__.py
sdk/python/pulumi_cert_manager_resources/certmanager/v1/: Certificate.py  CertificateRequest.py  ClusterIssuer.py  Issuer.py  __init__.py  _inputs.py  outputs.py
sdk/python/pulumi_cert_manager_resources/meta/: __init__.py
sdk/python/pulumi_cert_manager_resources/meta/v1/: __init__.py
sdk/python/pulumi_chart_cert_manager/: __init__.py  _inputs.py  cert_manager.py  outputs.py  provider.py
sdk/python/pulumi_kubernetes_cert_manager/: __init__.py  _inputs.py  _utilities.py  cert_manager.py  outputs.py  provider.py  pulumi-plugin.json
(+93 files in other folders)
