[project]
  name = "pulumi_kubernetes_cert_manager"
  description = "Strongly-typed Cert Manager installation"
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "pulumi-kubernetes>=3.7.1,<5.0.0", "semver>=2.8.1"]
  keywords = ["pulumi", "kubernetes", "cert-manager", "kind/component", "category/infrastructure"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "0.1.0a1717677520+e39943f"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.io"
    Repository = "https://github.com/pulumi/pulumi-kubernetes-cert-manager"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_kubernetes_cert_manager = ["py.typed", "pulumi-plugin.json"]
